# HTTP-static-server-TP

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  untitled
headers/: Handler.h  HandlerTask.h  IThreadTask.h  Server.h  ThreadPool.h  http.h
source/: Handler.cpp  HandlerTask.cpp  Server.cpp  ThreadPool.cpp  http.cpp
